arquivo de configuração utilizados em cada script, melhoria na documentação do arquivo de virtual host: glpi.conf, 
atualização da versão do PHP 7.4 no arquivo de agendamento: glpi.cron, retirado do script: 15-glpi.sh as dependências
do PHP: php-recode php-xsl php-gettext php-iconv (analisando se essas dependências vai afetar diretamente o GLPI),
adicionado no script: 05-ntp.sh a edição do arquivo de configuração: dhcpd.conf.

26/11/2021 - Robson Vaamonde - Acréscimo da linha: option wpad "http://172.16.1.20/wpad.dat"; no arquivo de configuração
dhcpd.conf para suporte o protocolo WPAD (Web Proxy Autodiscovery Protocol), criação do CNAME: wpad no arquivo de
configuração pti.intra.hosts

25/11/2021 - Robson Vaamonde - Customização do script 15-glpi.sh e criação das variáveis no arquivo 00-parametros.sh,
correções de PT-BR no arquivo 14-loganalyzer.sh.

23/11/2021 - Robson Vaamonde - Correção da falha do nome do pacote no script: 13-netdata.sh (pacote python3-psycopg2)
alteração das variáveis do script 14-loganalyzer.sh (USERMYSQL e SENHAMYSQL) para a criação das bases de dados do
Rsyslog e do LogAnalyzer, atualizando dos nomes das variáveis de criação das Bases de Dados do Rsyslog e LogAnalyzer,
acréscimo da remoção dos diretórios do LogAnalyzer e da tradução no script 14-loganalyzer.sh, 

20/11/2021 - Robson Vaamonde - Atualização do script: 01-openssh.sh, falha do redirecionamento do LOG da instalação
das ferramentas de rede ($LOG) na linha 128, atualização do arquivo de configuração do MySQL Server mysqld.cnf para
suportar somente IPV4 (bind-address	= 0.0.0.0), atualização dos arquivos de configuração do Bind9 named.conf.options
(recursion no;, version none;, server-id none;, querylog yes;) e named.conf.local (allow-transfer { none; };).

05/11/2021 - Robson Vaamonde - Atualização do script: 01-openssh.sh, acréscimo do bloco de instalação das ferramentas